# symallegro

./: .gitignore  README.md  pyproject.toml  req.txt  requirements.txt
configs/: full_allegro.yaml  tutorial.yaml
model/: allegro_models.py
nn/: _allegro.py
scripts/: download_aspirin.py  download_rmd17.py  run_test.sh  run_train.sh
src/: allegro.ipynb  datamodule.py  train.py
tests/: test_allegro.py
