[tool.poetry]
name = "allegro-local-dev"
version = "0.1.0"
description = "A local development setup for the Allegro model."
authors = ["Ngeyen Yinkfu <nyinkfu@andrew.cmu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
lightning = "^1.5.0"
nequip = { git = "https://github.com/ngeyen/allegro.git", branch = "main" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]